--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-    "name": "jmf/package-template",
-    "description" : "Package template for jmf packages",
+    "name": "jmf/twig-time",
+    "description" : "Twig extension for handling date and time in Twig templates.",
     "license": "mit",
     "type": "library",
     "require": {
-        "php": ">=8.3"
+        "php": ">=8.3",
+        "twig/twig": "^3.0"
+    },
+    "suggest": {
+        "ext-intl": "Required for localized date and time formatting."
     },
     "require-dev": {
         "phing/phing": "^2.17",
@@ -20,12 +24,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Jmf\\_PackageTemplate_\\": "src"
+            "Jmf\\Twig\\Extension\\Time\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Jmf\\_PackageTemplate_\\": "tests/unit/src"
+            "Jmf\\Twig\\Extension\\Time\\": "tests/unit/src"
         }
     }
 }
